# WarAgent-Langchain

./: README.md  pyproject.toml
src/: main.py
src/building_blocks/: agent.py  model.py  secretary.py
src/history_setting/: action_definition.py  agent_profile_WWI.py  agent_profile_WWII.py  agent_profile_WWI_deanonymize_mimicing actual history.py  agent_profile_WWI_deanonymize_reasoning.py  agent_profile_Warring.py
src/utils/: color.py
